[gd_scene load_steps=9 format=3 uid="uid://dbme3qfksd87m"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_co781"]
[ext_resource type="Texture2D" uid="uid://cd33dcmsfhwp" path="res://Asssets/textures/bg.png" id="1_qsjst"]
[ext_resource type="PackedScene" uid="uid://b8pct234arh6t" path="res://Scenes/player.tscn" id="2_7ckcu"]
[ext_resource type="PackedScene" uid="uid://budlr03m3h5c1" path="res://Scenes/enemy_spawner.tscn" id="5_3hfdu"]
[ext_resource type="PackedScene" uid="uid://dcu2c5agt6b66" path="res://Scenes/hud.tscn" id="5_km6u1"]
[ext_resource type="AudioStream" uid="uid://cobqjkge62240" path="res://Asssets/audio/hit.wav" id="6_krvsf"]
[ext_resource type="AudioStream" uid="uid://ca3pvotr1k88d" path="res://Asssets/audio/explode.wav" id="7_v1rko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jo1l"]
size = Vector2(100, 720)

[node name="Game" type="Node2D"]
script = ExtResource("1_co781")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1279.0
offset_bottom = 723.0
texture = ExtResource("1_qsjst")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_7ckcu")]
position = Vector2(80, 373)

[node name="EnemySpawner" parent="." instance=ExtResource("5_3hfdu")]

[node name="Deadzone" type="Area2D" parent="."]
position = Vector2(-150, 360)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deadzone"]
shape = SubResource("RectangleShape2D_2jo1l")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("5_km6u1")]

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_krvsf")

[node name="PlayerHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_v1rko")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawn" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawn"]
[connection signal="area_entered" from="Deadzone" to="." method="_on_deadzone_area_entered"]
